force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work__c/fields/agf__Additional_Details__c.field-meta.xml
<CustomField>
    <fullName>agf__Additional_Details__c</fullName>
    <label>Additional Details</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>