force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work__c/fields/agf__Age_With_Scrum_Team_When_Closed__c.field-meta.xml
<CustomField>
    <fullName>agf__Age_With_Scrum_Team_When_Closed__c</fullName>
    <description>Difference between closed date and the last time the scrum team field was modified unless the scrum team field was modified after the bug was closed. This calculation excludes weekends.</description>
    <formula>IF(ISNULL(agf__Scrum_Team_Last_Modified__c), null,
IF(  ( agf__Closed__c == 1 &amp;&amp; agf__Closed_On__c &gt; agf__Scrum_Team_Last_Modified__c),
CASE(MOD(  DATEVALUE(agf__Closed_On__c) - DATE(1985,6,24),7),
0 , CASE( MOD( DATEVALUE(agf__Closed_On__c) - DATEVALUE(agf__Scrum_Team_Last_Modified__c) ,7),1,0,2,0,3,1,4,2,5,3,6,4,0),
1 , CASE( MOD( DATEVALUE(agf__Closed_On__c) - DATEVALUE(agf__Scrum_Team_Last_Modified__c) ,7),1,1,2,1,3,1,4,2,5,3,6,4,0),
2 , CASE( MOD( DATEVALUE(agf__Closed_On__c) - DATEVALUE(agf__Scrum_Team_Last_Modified__c) ,7),1,1,2,2,3,2,4,2,5,3,6,4,0),
3 , CASE( MOD( DATEVALUE(agf__Closed_On__c) - DATEVALUE(agf__Scrum_Team_Last_Modified__c) ,7),1,1,2,2,3,3,4,3,5,3,6,4,0),
4 , CASE( MOD( DATEVALUE(agf__Closed_On__c) - DATEVALUE(agf__Scrum_Team_Last_Modified__c) ,7),1,1,2,2,3,3,4,4,5,4,6,4,0),
5 , CASE( MOD( DATEVALUE(agf__Closed_On__c) - DATEVALUE(agf__Scrum_Team_Last_Modified__c) ,7),1,0,2,1,3,2,4,3,5,4,6,0,0),
6 , CASE( MOD( DATEVALUE(agf__Closed_On__c) - DATEVALUE(agf__Scrum_Team_Last_Modified__c) ,7),1,0,2,0,3,1,4,2,5,3,6,4,0),
999)
+
(FLOOR(( DATEVALUE(agf__Closed_On__c) - DATEVALUE(agf__Scrum_Team_Last_Modified__c) )/7)*5)
, 0)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Difference between closed date and the last time the scrum team field was modified unless the scrum team field was modified after the bug was closed. This calculation excludes weekends.</inlineHelpText>
    <label>Age With Scrum Team When Closed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>