force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work__c/fields/agf__Apex_Hammer_Compile_Failure__c.field-meta.xml
<CustomField>
    <fullName>agf__Apex_Hammer_Compile_Failure__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Apex Hammer Compile Failure</label>
    <type>Checkbox</type>
</CustomField>