force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work__c/fields/agf__Assigned_On__c.field-meta.xml
<CustomField>
    <fullName>agf__Assigned_On__c</fullName>
    <description>Deprecated field for bugforce 1.0</description>
    <label>Assigned On</label>
    <type>Date</type>
</CustomField>