force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work__c/fields/agf__Assignees__c.field-meta.xml
<CustomField>
    <fullName>agf__Assignees__c</fullName>
    <description>This field is used as a transport object. Do not use this field on list view criteria or reports!</description>
    <inlineHelpText>Assignees of this work record receive email on save.</inlineHelpText>
    <label>transfer Assignees</label>
    <length>80</length>
    <type>Text</type>
</CustomField>