force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work__c/fields/agf__Backburner_Rank__c.field-meta.xml
<CustomField>
    <fullName>agf__Backburner_Rank__c</fullName>
    <label>Backburner Rank</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>