force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work__c/fields/agf__Board_Column__c.field-meta.xml
<CustomField>
    <fullName>agf__Board_Column__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Board Column</label>
    <referenceTo>agf__ADM_Column__c</referenceTo>
    <relationshipLabel>Work (Board Column)</relationshipLabel>
    <relationshipName>Work1</relationshipName>
    <type>Lookup</type>
</CustomField>