force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work__c/fields/agf__Board_Column_Rank__c.field-meta.xml
<CustomField>
    <fullName>agf__Board_Column_Rank__c</fullName>
    <label>Board Column Rank</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>