force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work__c/fields/agf__Bug_Number__c.field-meta.xml
<CustomField>
    <fullName>agf__Bug_Number__c</fullName>
    <label>Bugforce #</label>
    <length>64</length>
    <type>Text</type>
</CustomField>