force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work__c/fields/agf__Capex_Enabled__c.field-meta.xml
<CustomField>
    <fullName>agf__Capex_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Customer Facing Feature</label>
    <type>Checkbox</type>
</CustomField>