force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work__c/fields/agf__Child_ID__c.field-meta.xml
<CustomField>
    <fullName>agf__Child_ID__c</fullName>
    <label>Child_ID</label>
    <length>99</length>
    <type>Text</type>
</CustomField>