force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work__c/fields/agf__Closed_On__c.field-meta.xml
<CustomField>
    <fullName>agf__Closed_On__c</fullName>
    <label>Closed On</label>
    <type>DateTime</type>
</CustomField>