force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work__c/fields/agf__Comment_Copy__c.field-meta.xml
<CustomField>
    <fullName>agf__Comment_Copy__c</fullName>
    <label>Comment Copy</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>