force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work__c/fields/agf__Completed_Hours__c.field-meta.xml
<CustomField>
    <fullName>agf__Completed_Hours__c</fullName>
    <description>Total of Actual hours on all the child tasks associated to this work-item</description>
    <label>Completed Hours</label>
    <summarizedField>agf__ADM_Task__c.agf__Actual_Hours__c</summarizedField>
    <summaryFilterItems>
        <field>agf__ADM_Task__c.agf__Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </summaryFilterItems>
    <summaryForeignKey>agf__ADM_Task__c.agf__Work__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>