force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work__c/fields/agf__Created_On_Date__c.field-meta.xml
<CustomField>
    <fullName>agf__Created_On_Date__c</fullName>
    <formula>IF( ISNULL( agf__Created_On_import__c ) ,  DATEVALUE( CreatedDate ) ,  DATEVALUE( agf__Created_On_import__c )  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created On Date</label>
    <type>Date</type>
</CustomField>