force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work__c/fields/agf__Critical_CRM_Feature__c.field-meta.xml
<CustomField>
    <fullName>agf__Critical_CRM_Feature__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Critical CRM Feature or Org Inaccessible</label>
    <type>Checkbox</type>
</CustomField>