force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work__c/fields/agf__CS_Contact__c.field-meta.xml
<CustomField>
    <fullName>agf__CS_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field defaults to the Investigation creator if the creator is in support (otherwise it defaults to blank). It can also be populated/overridden manually.</description>
    <inlineHelpText>This field defaults to the Investigation creator if the creator is in support (otherwise it defaults to blank). It can also be populated/overridden manually.</inlineHelpText>
    <label>Support Contact</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Work4</relationshipName>
    <type>Lookup</type>
</CustomField>