force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work__c/fields/agf__Customer__c.field-meta.xml
<CustomField>
    <fullName>agf__Customer__c</fullName>
    <label>Customer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>