force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work__c/fields/agf__Data_Silo_Test_Affected__c.field-meta.xml
<CustomField>
    <fullName>agf__Data_Silo_Test_Affected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Data Silo Test Affected</label>
    <type>Checkbox</type>
</CustomField>