force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work__c/fields/agf__Dependencies__c.field-meta.xml
<CustomField>
    <fullName>agf__Dependencies__c</fullName>
    <label>Dependencies</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>