force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work__c/fields/agf__Description__c.field-meta.xml
<CustomField>
    <fullName>agf__Description__c</fullName>
    <inlineHelpText>Comments will be added to the Work record and included in an email to the names listed in the Email Notifications section after saving. Formatting will also be preserved when saving via in line edit.</inlineHelpText>
    <label>Comment</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>