force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work__c/fields/agf__Detailed__c.field-meta.xml
<CustomField>
    <fullName>agf__Detailed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select this checkbox for epic stories that have been divided into detailed stories and therefore the epic no longer needs to appear on the backlog.</inlineHelpText>
    <label>Exclude from Prioritize View</label>
    <type>Checkbox</type>
</CustomField>