force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work__c/fields/agf__Details__c.field-meta.xml
<CustomField>
    <fullName>agf__Details__c</fullName>
    <inlineHelpText>User type (As a...) Goal (I want to...) Reason (so that...) Additional Details</inlineHelpText>
    <label>Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>