force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work__c/fields/agf__Due_Date__c.field-meta.xml
<CustomField>
    <fullName>agf__Due_Date__c</fullName>
    <label>Due Date</label>
    <type>DateTime</type>
</CustomField>