force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work__c/fields/agf__Email2GUS_Addresses__c.field-meta.xml
<CustomField>
    <fullName>agf__Email2GUS_Addresses__c</fullName>
    <description>Used to record the email list from the to and cc list on emails sent into GUS from outside sources.</description>
    <label>Email2GUS Addresses</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>