force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work__c/fields/agf__Email_On_Save__c.field-meta.xml
<CustomField>
    <fullName>agf__Email_On_Save__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box to send an email to the users in the To: field when you save this record.</inlineHelpText>
    <label>Email On Save</label>
    <type>Checkbox</type>
</CustomField>