force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work__c/fields/agf__Email_On_Save_Copy__c.field-meta.xml
<CustomField>
    <fullName>agf__Email_On_Save_Copy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email On Save Copy</label>
    <type>Checkbox</type>
</CustomField>