force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work__c/fields/agf__Email_Subscription_ID__c.field-meta.xml
<CustomField>
    <fullName>agf__Email_Subscription_ID__c</fullName>
    <inlineHelpText>Enter email aliases separated by spaces. These users are sent one email if the &quot;Email on Save&quot; check box is selected when you click &quot;Save.&quot; They do not automatically receive future updates.</inlineHelpText>
    <label>To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>