force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work__c/fields/agf__Email_Subscription_Queue__c.field-meta.xml
<CustomField>
    <fullName>agf__Email_Subscription_Queue__c</fullName>
    <formula>IF( agf__Email_Subscription_ID__c = &quot;&quot; , &quot;&quot;, HYPERLINK(&quot;/p/own/Queue/d?id=&quot; &amp; agf__Email_Subscription_ID__c , agf__Email_Subscription_ID__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Subscription Queue</label>
    <type>Text</type>
</CustomField>