force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work__c/fields/agf__Encoded_Recipients_Txt_Area__c.field-meta.xml
<CustomField>
    <fullName>agf__Encoded_Recipients_Txt_Area__c</fullName>
    <label>Encoded Recipients</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>