force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work__c/fields/agf__Environment__c.field-meta.xml
<CustomField>
    <fullName>agf__Environment__c</fullName>
    <label>Environment</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Production</fullName>
            </value>
            <value>
                <fullName>Sandbox</fullName>
            </value>
            <value>
                <fullName>Mobile1</fullName>
            </value>
            <value>
                <fullName>Mobile2</fullName>
            </value>
            <value>
                <fullName>Blitz Localhost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>