force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work__c/fields/agf__Epic_Name__c.field-meta.xml
<CustomField>
    <fullName>agf__Epic_Name__c</fullName>
    <formula>agf__Epic__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Epic Name</label>
    <type>Text</type>
</CustomField>