force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work__c/fields/agf__Escalation_Point__c.field-meta.xml
<CustomField>
    <fullName>agf__Escalation_Point__c</fullName>
    <label>Escalation Point</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>