force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work__c/fields/agf__Estimated_Financial_Impact__c.field-meta.xml
<CustomField>
    <fullName>agf__Estimated_Financial_Impact__c</fullName>
    <label>Estimated Financial Impact</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>