force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work__c/fields/agf__Executive_Involved__c.field-meta.xml
<CustomField>
    <fullName>agf__Executive_Involved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Executive Involved</label>
    <type>Checkbox</type>
</CustomField>