force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work__c/fields/agf__Feedback__c.field-meta.xml
<CustomField>
    <fullName>agf__Feedback__c</fullName>
    <label>Feedback</label>
    <type>TextArea</type>
</CustomField>