force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work__c/fields/agf__Found_in_Build__c.field-meta.xml
<CustomField>
    <fullName>agf__Found_in_Build__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Found In Build field is a lookup to the Build object.  Enter the build where the bug was introduced.</inlineHelpText>
    <label>Found in Build</label>
    <referenceTo>agf__ADM_Build__c</referenceTo>
    <relationshipLabel>Work (Found in Build)</relationshipLabel>
    <relationshipName>Found_in_Build</relationshipName>
    <type>Lookup</type>
</CustomField>