force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work__c/fields/agf__Found_In_Build_Name__c.field-meta.xml
<CustomField>
    <fullName>agf__Found_In_Build_Name__c</fullName>
    <formula>agf__Found_in_Build__r.Name</formula>
    <label>Found In Build Name</label>
    <type>Text</type>
</CustomField>