force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work__c/fields/agf__Frequency__c.field-meta.xml
<CustomField>
    <fullName>agf__Frequency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Frequency reflects how often the target user will encounter the issue.</inlineHelpText>
    <label>Frequency</label>
    <referenceTo>agf__ADM_Frequency__c</referenceTo>
    <relationshipLabel>Work</relationshipLabel>
    <relationshipName>Work</relationshipName>
    <type>Lookup</type>
</CustomField>