force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work__c/fields/agf__Frequency_Name__c.field-meta.xml
<CustomField>
    <fullName>agf__Frequency_Name__c</fullName>
    <formula>agf__Frequency__r.Name</formula>
    <label>Frequency Name</label>
    <type>Text</type>
</CustomField>