force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work__c/fields/agf__ftest__c.field-meta.xml
<CustomField>
    <fullName>agf__ftest__c</fullName>
    <inlineHelpText>Document the name of the automated test to prevent this bug happenning again.</inlineHelpText>
    <label>test</label>
    <length>255</length>
    <type>Text</type>
</CustomField>