force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work__c/fields/agf__Goal__c.field-meta.xml
<CustomField>
    <fullName>agf__Goal__c</fullName>
    <label>Goal (I want to...)</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>