force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work__c/fields/agf__Has_Story_Points__c.field-meta.xml
<CustomField>
    <fullName>agf__Has_Story_Points__c</fullName>
    <formula>IF(agf__Story_Points__c &gt;= 0, &quot;Yes&quot;, &quot;No&quot;)</formula>
    <label>Has Story Points?</label>
    <type>Text</type>
</CustomField>