force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work__c/fields/agf__Highlight__c.field-meta.xml
<CustomField>
    <fullName>agf__Highlight__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Highlight</label>
    <type>Checkbox</type>
</CustomField>