force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work__c/fields/agf__Impact_Name__c.field-meta.xml
<CustomField>
    <fullName>agf__Impact_Name__c</fullName>
    <formula>agf__Impact__r.Name</formula>
    <label>Impact Name</label>
    <type>Text</type>
</CustomField>