force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work__c/fields/agf__Is_Ignorable__c.field-meta.xml
<CustomField>
    <fullName>agf__Is_Ignorable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For internal use only.</description>
    <label>Is Ignorable</label>
    <type>Checkbox</type>
</CustomField>